--- a/handson.html
+++ b/handson.html
@@ -2,71 +2,83 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,user-scalable=0">
-	<title>関西フロントエンドカンファレンス2016</title>
+<meta name="viewport" content="width=device-width,user-scalable=0">
+<title>FRONTEND CONFERENCE 2016</title>
 
-	<meta name="description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta name="keywords" content="フロントエンド,関西フロントエンドUG,関西フロントエンドカンファレンス2016">
-	<meta property="og:title" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:type" content="article">
-	<meta property="og:url" content="ダミーurl">
-	<meta property="og:site_name" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta property="og:image" content="ダミーog画像">
+<meta name="description" content="関西最大級のフロントエンドの祭典、FRONTEND CONFERENCE 2016!! 大阪梅田 にて 2016.03.05 開催!">
+<meta name="keywords" content="フロントエンド,関西フロントエンドUG,KFUG,FRONTEND CONFERENCE,フロントエンドカンファレンス2016">
+<meta property="og:title" content="フロントエンドカンファレンス2016">
+<meta property="og:type" content="article">
+<meta property="og:url" content="http://kfug.github.io/frontconf2016/">
+<meta property="og:site_name" content="フロントエンドカンファレンス2016">
+<meta property="og:description" content="関西最大級のフロントエンドの祭典、FRONTEND CONFERENCE 2016!! 大阪梅田 にて 2016.03.05 開催!">
+<meta property="og:image" content="http://kfug.github.io/frontconf2016/img/fec_main.png">
 
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/ihover.min.css">
-	<link rel="stylesheet" href="css/hover.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/handson.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/ihover.min.css">
+<link rel="stylesheet" href="css/hover.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/common.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-	<script type="text/javascript" src="js/functions.js"></script>
+<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 
+
+	<style>
+		.sublogo{
+			width:100%;
+			max-width: 980px;
+			margin: 0 auto;
+			display: block;
+		}
+	</style>
+	
 </head>
-<body id="speaker">
+<body>
+
+
 <div id="floating">
-	<p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
+    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
 <header id="top-head">
-	<div class="inner">
-		<div id="mobile-head">
-			<h1 class="logo"><a href="/">Logo</a></h1>
-			<div id="nav-toggle">
-				<div>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-		</div>
-		<nav id="global-nav">
-			<ul>
-				<li><a href="/#about" class="hvr-underline-from-center">ABOUT</a></li> 
-				<!-- <li><a href="/#news" class="hvr-underline-from-center">NEWS</a></li> -->
-				<!-- <li><a href="/#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
-				<li><a href="/#access" class="hvr-underline-from-center">ACCESS</a></li>
-				<li><a href="/#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
-				<li><a href="/#faq" class="hvr-underline-from-center">FAQ</a></li>
-				<li><a href="/#contact" class="hvr-underline-from-center">CONTACT</a></li>
-			</ul>
-		</nav>
-	</div>
+    <div class="inner">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="./"><img src="./img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="global-nav">
+            <ul>
+                <li><a href="./#about" class="hvr-underline-from-center">ABOUT</a></li>
+                <li><a href="./#news" class="hvr-underline-from-center">NEWS</a></li>
+                <!-- <li><a href="#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
+                <li><a href="./#access" class="hvr-underline-from-center">ACCESS</a></li>
+                <li><a href="./#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
+                <li><a href="./#faq" class="hvr-underline-from-center">FAQ</a></li>
+                <li><a href="./#contact" class="hvr-underline-from-center">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
-<div id="content-wraper">
+
+
+<div id="content-wraper" class="handsonArea">
+	<img class="sublogo" src="./img/fec_main.jpg" alt="">
 	<section class="pagettl column">
-		<h2 class="animated bounceInDown">
-			<p>frontend conference 2015</p>
-			<p>×</p>
-			<p>HANDS ON</p>
-		</h2>
-	</section>
-	<section>
+		<div class="inner">
+			<h2 class="animated bounceInDown">HANDS ON</h2>
+		</div><!-- /.inner -->
+	</section><!-- /.column -->
+	
+	<section id="handson-howto">
 	<div class="inner">
-		<img src="http://placehold.it/980x300/ccc/fff/&text=ハンズオンの様子みたいなの" alt="">
 		<div class="handson-howto">
 			<h1>ハンズオンってなんだろう？</h1>
 			<p>ハンズオンは、実際に手を動かしながら新しい技術に挑戦できる、体験型のブースです。</p>
@@ -79,7 +91,7 @@
 	<section id="handson-lists">
 		<div class="inner">
 		<div class="handson-lists">
-			<h1>フロントエンドカンファレンス2016で<br>チャレンジできること</h1>
+			<h1 class="edge">フロントエンドカンファレンス2016でチャレンジできること</h1>
 			<ul>
 				
 				<li><a href="#">progateで始めるコーディング入門</a><span class="tag">デザイナー向け</span></li>
@@ -108,21 +120,26 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -132,21 +149,26 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -156,21 +178,26 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -180,21 +207,26 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -204,21 +236,26 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -228,70 +265,96 @@
 					<p>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。<br>
 						手は前していた。先生は一知っ靴のようをすうていない。セロも頭象たり何がきいて来ます。</p>
 				</div>
-				<div class="detail">
-					<div class="speaker">
-						<img class="prof-img" src="http://placehold.it/400x400/ccc/fff/&text=hoge" alt="">
+				<div class="row detail">
+					<div class="col-sm-6 speaker-prof">
 						<div class="prof-detail">
-							<h1>ほにゃにゃ</h1>
-							<p>ほにょほにょほにょほにょほにょほにょほにょほにょほにょ</p>
+							<dl>
+								<dt>講師</dt>
+								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
+								<dd>ほにゃにゃさん</dd>
+								<dd>ほにょほにょほにょ</dd>
+							</dl>
 						</div>
 					</div>
-					<dl>
-						<dt>時間</dt>
-						<dd>　20:00 - 23:00</dd>
-						<dd>3時間</dd>
-					</dl>
+					<div class="col-sm-6 handson-detail">
+						<dl>
+							<dt>時間</dt>
+							<dd>20:00 - 23:00</dd>
+							<dd>3時間</dd>
+						</dl>
+					</div>
 				</div>
-				<div><a href="btn">参加する！</a></div>
+				<div class=" btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 		</div>
 	</section>
-	<section>
+	
+	<section id="handson-info">
 		<div class="inner">
 		<div class="handson-info">
-			<div>
 				<dl>
 					<dt>受付について</dt>
 					<dd>上手たでのだはたそしてばかの同じ手のうちをはまるでばかましたが、あれまで赤に困るれことでした。たべすぎ誰は畑へ高くたていっぺんの狸の外弾をし第三月みちの演奏に叩くでしまいんます。</dd>
+				</dl>
+				<dl>
 					<dt>諸注意</dt>
 					<dd>当日は各自PCをご持参ください(PCのレンタルは行っておりません)。</dd>
 					<dd>メンタースタッフと参加人数のバランスでは、質問対応にお時間を頂くケースがあります。</dd>
 					<dd>ネットワークの状態や持ち込み機器の状態で、作業の進行が出来ない場合がございます。</dd>
 				</dl>
-			</div>
+				<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>
 		</div>
-		<div class="join"></div>
-	
-		<div id="page-top" class="hvr-icon-bob">
-			<a href="#content-wraper">PAGE TOP</a>
+		<div class="join">
+			<p class="btn"><a href="">フロントエンドカンファレンス2016に参加する！</a></p>
+			<p class="btn"><a href="">個人/企業スポンサーはこちら</a></p>
 		</div>
 		</div>
 	</section>
 	
-		
-	<footer>
-		<small>&copy; Kansai Frontend UG</small>
-		<ul class="snsbox cf">
-				<li><a href="https://www.facebook.com/groups/kansai.frontend/" target="_blank">facebook</a></li>
-				<li><a href="https://twitter.com/frontkansai" target="_blank">twitter</a></li>
-				<li><a href="http://kfug.connpass.com/" target="_blank">connpass</a></li>
-			</ul>
-	</footer>
+	<div id="page-top" class="hvr-icon-bob">
+		<a href="#content-wraper">PAGE TOP</a>
+	</div>
+
+
 </div>
+<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <br>
+                <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+            </div>
+            <div class="col-sm-6 linkArea">
+                <h3 id="contact">CONTACT</h3>
+                <p>
+                    お問い合わせは
+                    <a href="https://www.facebook.com/frontconf2016/" target="_blank">Facebookページ</a>
+                    または
+                    <a href="https://twitter.com/frontkansai" target="_blank">Twitter公式アカウント</a>
+                    よりお願いします。
+                </p>
+                <p>
+                    その他関西フロントエンドUGのイベント情報は
+                    <a href="http://kfug.connpass.com/">Connpassページ</a>
+                    や
+                    <a href="https://www.facebook.com/groups/kansai.frontend">Facebookグループ</a>
+                    よりご確認ください。
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+
 <!-- /#contentWraper -->
-
-
-
-
-
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-66526811-4', 'auto');
-  ga('send', 'pageview');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-66526811-4', 'auto');
+    ga('send', 'pageview');
 </script>
+
 </body>
 </html>
