--- a/src/handson.html
+++ b/src/handson.html
@@ -84,14 +84,14 @@
 			<p>ハンズオンは、実際に手を動かしながら新しい技術に挑戦できる、体験型のブースです。</p>
 			<p>話を聞くスタイルのセッションと異なり、実際にその場で新しい技術にチャレンジできるので初心者の方にも安心の企画となっています。</p>
 			<p>わからない所や学習に詰まった時などは、会場内のメンターに気軽に質問できるので、迷うこと無く「できる!!」に到達できます!!</p>
-			<p>勉強会は難しそうな話が多くてレベルが高そう…と思っていたあなたも、frontend conference 2016のハンズオンブースで、「イマドキのフロントエンドエンジニア」の仲間入りに挑戦してみませんか？</p>
+			<p>勉強会は難しそうな話が多くてレベルが高そう…と思っていたあなたも、FRONTEND CONFERENCE 2016のハンズオンブースで、「イマドキのフロントエンドエンジニア」の仲間入りに挑戦してみませんか？</p>
 		</div>
 		</div>
 	</section>
 	<section id="handson-lists">
 		<div class="inner">
 		<div class="handson-lists">
-			<h1 class="edge">フロントエンドカンファレンス2016でチャレンジできること</h1>
+			<h1 class="edge">FRONTEND CONFERENCE 2016 でチャレンジできること</h1>
 			<ul>
 				
 				<li><a href="#">progateで始めるコーディング入門</a><span class="tag">デザイナー向け</span></li>
@@ -126,7 +126,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -135,11 +135,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -155,7 +155,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -164,11 +164,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -184,7 +184,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -193,11 +193,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -213,7 +213,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -222,11 +222,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -242,7 +242,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -251,11 +251,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 			<div class="handson-list">
@@ -271,7 +271,7 @@
 							<dl>
 								<dt>講師</dt>
 								<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>
-								<dd>ほにゃにゃさん</dd>
+								<dd class="name">ほにゃにゃさん</dd>
 								<dd>ほにょほにょほにょ</dd>
 							</dl>
 						</div>
@@ -280,11 +280,11 @@
 						<dl>
 							<dt>時間</dt>
 							<dd>20:00 - 23:00</dd>
-							<dd>3時間</dd>
+							<dd class="time">3時間</dd>
 						</dl>
 					</div>
 				</div>
-				<div class=" btn-join"><a href="">参加する！</a></div>
+				<div class="btn-join"><a href="">参加する！</a></div>
 			</div>
 			
 		</div>
@@ -306,8 +306,8 @@
 				<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>
 		</div>
 		<div class="join">
-			<p class="btn"><a href="">フロントエンドカンファレンス2016に参加する！</a></p>
-			<p class="btn"><a href="">個人/企業スポンサーはこちら</a></p>
+			<div class="btn-join"><a href="">FRONTEND CONFERENCE 2016 に参加する！</a></div>
+			<div class="btn"><a href="">個人/企業スポンサーはこちら</a></div>
 		</div>
 		</div>
 	</section>
