--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,15 @@
     }
 });
 </script>
+	<style>
+		.kfugBtn{
+			margin: 2em 0;
+			border: 3px solid #23a8fc;
+			border-radius: 2px;
+			padding: .5em 1em;
+
+		}
+	</style>
 </head>
 <body>
 
@@ -169,7 +178,13 @@
 				JSフレームワークやSASS,デザイン設計など 気になるセッション一覧は
 				<a style="color:#00C0FF;" href="./speaker.html">こちらをチェック!!</a>
 			</p>
+			<br>
+			<br>
+
+			<p class="kfugBtn">参加チケットの一般申込は近日公開!! <br>優先案内付きの個人/法人スポンサーチケットは <a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">こちら</a>からお申し込みください!!	</p>
 		</div><!-- /.inner -->
+
+
 	</section><!-- /#about -->
 
 
@@ -324,6 +339,21 @@
 								</div>
 							</div>
 							<span class="name">榊原昌彦	</span></a>
+					</div>
+				</li>
+				
+				<li>
+					<div class="ih-item circle colored effect1">
+						<a href="speaker.html#B010"><div class="spinner"></div>
+							<div class="img">
+								<img style="height: inherit" src="./images/speakers/B010.jpg">
+							</div>
+							<div class="info">
+								<div class="info-back">
+									<p><i class="fa fa-share"></i></p>
+								</div>
+							</div>
+							<span class="name">山下 一樹</span></a>
 					</div>
 				</li>
 				
