--- a/src/speaker.html
+++ b/src/speaker.html
@@ -219,6 +219,30 @@ UXの観点から神経物理学、行動経済学の知識が必要となって
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
+	<section class="column speaker" id="B010">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/B010.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">これからのデザインを考える</h2>
+					<h1>山下 一樹</h1>
+					<p>Web やアプリにおける「フロントエンド」に関わるエンジニア、デザイナーがこれから考えるべきデザインとはどのようなものなのか。UI や UX だけでなく「デザイン（設計）する」ということにフォーカスしながら皆さんと考えていければと思います。
+[キーワード: デザイン思考、インタラクションデザイン、共創]</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
 	<section class="column speaker" id="B050">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
