--- a/handson.html
+++ b/handson.html
@@ -323,7 +323,9 @@
         <div class="row">
             <div class="col-sm-6">
                 <br>
-                <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+                <a href="./">
+                    <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+                </a>
             </div>
             <div class="col-sm-6 linkArea">
                 <h3 id="contact">CONTACT</h3>
