--- a/src/speaker.html
+++ b/src/speaker.html
@@ -256,7 +256,7 @@ UXの観点から神経物理学、行動経済学の知識が必要となって
 				<div class="speaker-detail">
 					<h2 style="font-size: 1.5em;margin: .5em 0 ">超軽量 Sass ライブラリ Bourbon/Neat のススメ</h2>
 					<h1>Kite</h1>
-					<p>BootStrap などの CSS フレームワークが抱える根本的な問題を解決してくれる Bourbon/Neat という超軽量 Sass ライブラリをご紹介します。Bourbon ツールセット (Bourbon/Neat/Bitter/Refills) の説明や使うメリットをお話し、それらを使ったライブコーディングを行う予定です。</p>
+					<p>BootStrap などの CSS フレームワークが抱える根本的な問題を解決してくれる Bourbon/Neat という超軽量 Sass ライブラリをご紹介します。Bourbon ツールセット (Bourbon/Neat/Bitters/Refills) の説明や使うメリットをお話し、それらを使ったライブコーディングを行う予定です。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
 			<!--<ul class="tag">-->
@@ -280,7 +280,9 @@ UXの観点から神経物理学、行動経済学の知識が必要となって
         <div class="row">
             <div class="col-sm-6">
                 <br>
-                <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+                <a href="./">
+                    <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+                </a>
             </div>
             <div class="col-sm-6 linkArea">
                 <h3 id="contact">CONTACT</h3>
