--- a/src/handson.html
+++ b/src/handson.html
@@ -49,7 +49,7 @@
 
 
 <div id="floating">
-    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
+    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">ハンズオン優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
 <header id="top-head">
     <div class="inner">
@@ -120,11 +120,6 @@
 				</li>
 				
 				<li><a class="scroll" data-target="#seminorSP004">CSSをもっと便利に。BootstrapとSass入門</a>
-					<!--<span class="tag">デザイナー向け</span>-->
-					<!--<span class="tag">エンジニア向け</span>-->
-				</li>
-				
-				<li><a class="scroll" data-target="#seminorSP005">JavaScriptの新標準。BabelでES2015を始めよう</a>
 					<!--<span class="tag">デザイナー向け</span>-->
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
@@ -252,35 +247,6 @@
 				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
 			</div>
 			
-			<div class="handson-list" id="seminorSP005">
-				<div class="heading">
-					<h1>JavaScriptの新標準。BabelでES2015を始めよう</h1>
-					<!--<span class="tag">デザイナー向け</span>-->
-					<p>JavaScriptの新仕様 ES2015。昨年に言語仕様が正式公開され、JS界隈では大きな話題を呼びました。
- 各種ブラウザの実装は、まだもう少し時間がかかるといったところですが、Babel等のツールを用いたES2015記法の利用がJS界隈では主流となってきています。この機会に是非JSの新しい形を始めてみましょう!!</p>
-				</div>
-				<!--<div class="row detail">-->
-					<!--<div class="col-sm-6 speaker-prof">-->
-						<!--<div class="prof-detail">-->
-							<!--<dl>-->
-								<!--<dt>講師</dt>-->
-								<!--<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>-->
-								<!--<dd class="name">ほにゃにゃさん</dd>-->
-								<!--<dd>ほにょほにょほにょ</dd>-->
-							<!--</dl>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="col-sm-6 handson-detail">-->
-						<!--<dl>-->
-							<!--<dt>時間</dt>-->
-							<!--<dd>20:00 - 23:00</dd>-->
-							<!--<dd class="time">3時間</dd>-->
-						<!--</dl>-->
-					<!--</div>-->
-				<!--</div>-->
-				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
-			</div>
-			
 		</div>
 	</section>
 	
@@ -290,6 +256,7 @@
 				<dl>
 					<dt>受付について</dt>
 					<dd>受付は当日会場内にて実施させていただきます。</dd>
+					<dd>当日は受付の混雑が予想されますので、確実な参加をご希望の方は <a href="http://the-frontend-conference-2016.peatix.com">スポンサーチケット</a>のご購入をオススメします</dd>
 					<dd>会場内での説明や資料をベースに、各自で作業を進めて頂き、不明な点を質問形式でサポートする形のブースイベントとなっております。</dd>
 					<dd>各受講者に決められた形のメンターが付いてサポートするタイプのイベントではない点、予めご了承ください。</dd>
 				</dl>
@@ -303,11 +270,7 @@
 				<!--<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>-->
 		</div>
 		<div class="join">
-			<p>現在優先案内枠付のスポンサーチケット発売中!!</p>
-			<!--<div class="btn-join"><a href="">FRONTEND CONFERENCE 2016 に参加する！</a></div>-->
-			<div class="btn"><a href="http://the-frontend-conference-2016.peatix.com" target="_blank">個人/企業スポンサーのお申し込みはこちら</a></div>
-
-			<p>一般参加受付は後日、参加登録開始予定!!</p>
+			<div class="btn"><a href="http://ptix.co/1RHIQDV" target="_blank">一般参加申込はこちら!!</a></div>
 		</div>
 		</div>
 	</section>
