--- a/src/speaker.html
+++ b/src/speaker.html
@@ -38,7 +38,7 @@
 
 
 <div id="floating">
-    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
+    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">ハンズオン優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
 <header id="top-head">
     <div class="inner">
