--- a/src/handson.html
+++ b/src/handson.html
@@ -124,6 +124,11 @@
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
 				
+				<li><a class="scroll" data-target="#seminorSP006">国際に太陽できるサイトの導入</a>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<!--<span class="tag">エンジニア向け</span>-->
+				</li>
+				
 			</ul>
 		</div>
 		</div>
@@ -224,6 +229,34 @@
 					<!--<span class="tag">デザイナー向け</span>-->
 					<p>Sassと呼ばれるCSSの新しい書き方が登場してから、数年が経過しますが、現場ではCSSをガリガリ書いている…という所も実はまだ多いのではないでしょうか？
 このハンズオンではSassの一種であるSCSSを中心に、SCSSの基本的な使い方から活用方法等を説明していきます。</p>
+				</div>
+				<!--<div class="row detail">-->
+					<!--<div class="col-sm-6 speaker-prof">-->
+						<!--<div class="prof-detail">-->
+							<!--<dl>-->
+								<!--<dt>講師</dt>-->
+								<!--<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>-->
+								<!--<dd class="name">ほにゃにゃさん</dd>-->
+								<!--<dd>ほにょほにょほにょ</dd>-->
+							<!--</dl>-->
+						<!--</div>-->
+					<!--</div>-->
+					<!--<div class="col-sm-6 handson-detail">-->
+						<!--<dl>-->
+							<!--<dt>時間</dt>-->
+							<!--<dd>20:00 - 23:00</dd>-->
+							<!--<dd class="time">3時間</dd>-->
+						<!--</dl>-->
+					<!--</div>-->
+				<!--</div>-->
+				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
+			</div>
+			
+			<div class="handson-list" id="seminorSP006">
+				<div class="heading">
+					<h1>国際に太陽できるサイトの導入</h1>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<p>ウエブサイトを外国対応するのが難しくないですがまた試したことがない人はたくさんいます。簡単なサンプルを使ってウエッブサイトを外国の聴衆できるワークフローを紹介します。翻訳、通貨、SEOの基本だけど大切なコンゼプトは含めて勉強しましょう。</p>
 				</div>
 				<!--<div class="row detail">-->
 					<!--<div class="col-sm-6 speaker-prof">-->
