ハンズオンの修正

--- a/handson.html
+++ b/handson.html
@@ -109,7 +109,7 @@
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
 				
-				<li><a class="scroll" data-target="#seminorSP002">黒い画面で始めるGit入門</a>
+				<li><a class="scroll" data-target="#seminorSP002">Gitを始めてみよう!!</a>
 					<!--<span class="tag">デザイナー向け</span>-->
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
@@ -162,10 +162,10 @@
 			
 			<div class="handson-list" id="seminorSP002">
 				<div class="heading">
-					<h1>黒い画面で始めるGit入門</h1>
+					<h1>Gitを始めてみよう!!</h1>
 					<!--<span class="tag">デザイナー向け</span>-->
 					<p>最近何かと耳にすることの多くなったGit。バージョン管理ツールとしての利用だけでなくGithubやBitbucketといったWebサービスを通じたファイルのやり取りにも利用されるシーンが増えてきました。
- 黒い画面は苦手…という方も、Gitを通じて苦手を克服し、Gitデビューしてみませんか？</p>
+ 黒い画面は苦手…という方でも安心のSourceTreeによるGUI操作で、Gitデビューしてみませんか？</p>
 				</div>
 				<!--<div class="row detail">-->
 					<!--<div class="col-sm-6 speaker-prof">-->
