--- a/handson.html
+++ b/handson.html
@@ -124,7 +124,12 @@
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
 				
-				<li><a class="scroll" data-target="#seminorSP006">国際に太陽できるサイトの導入</a>
+				<li><a class="scroll" data-target="#seminorSP005">Jadeで始める新しいHTMLの書き方</a>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<!--<span class="tag">エンジニア向け</span>-->
+				</li>
+				
+				<li><a class="scroll" data-target="#seminorSP006">国際化に対応できるサイトの導入</a>
 					<!--<span class="tag">デザイナー向け</span>-->
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
@@ -252,11 +257,40 @@
 				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
 			</div>
 			
+			<div class="handson-list" id="seminorSP005">
+				<div class="heading">
+					<h1>Jadeで始める新しいHTMLの書き方</h1>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<p>JadeはHTMLをコンパイルして生成するテンプレートエンジンです。Jadeを用いることで複数のHTMLページを効率的に制作出来るようになります。
+ AltJSやAltCSSなどNode.jsを用いたワークフローが進む中、HTMLコーディングにも効率化のテクニック、取り入れてみませんか？</p>
+				</div>
+				<!--<div class="row detail">-->
+					<!--<div class="col-sm-6 speaker-prof">-->
+						<!--<div class="prof-detail">-->
+							<!--<dl>-->
+								<!--<dt>講師</dt>-->
+								<!--<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>-->
+								<!--<dd class="name">ほにゃにゃさん</dd>-->
+								<!--<dd>ほにょほにょほにょ</dd>-->
+							<!--</dl>-->
+						<!--</div>-->
+					<!--</div>-->
+					<!--<div class="col-sm-6 handson-detail">-->
+						<!--<dl>-->
+							<!--<dt>時間</dt>-->
+							<!--<dd>20:00 - 23:00</dd>-->
+							<!--<dd class="time">3時間</dd>-->
+						<!--</dl>-->
+					<!--</div>-->
+				<!--</div>-->
+				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
+			</div>
+			
 			<div class="handson-list" id="seminorSP006">
 				<div class="heading">
-					<h1>国際に太陽できるサイトの導入</h1>
+					<h1>国際化に対応できるサイトの導入</h1>
 					<!--<span class="tag">デザイナー向け</span>-->
-					<p>ウエブサイトを外国対応するのが難しくないですがまた試したことがない人はたくさんいます。簡単なサンプルを使ってウエッブサイトを外国の聴衆できるワークフローを紹介します。翻訳、通貨、SEOの基本だけど大切なコンゼプトは含めて勉強しましょう。</p>
+					<p>Webサイトの外国語対応は難しくないですが、また試したことがない人はたくさんいます。簡単なサンプルを使って外国語対応のためのワークフローを紹介します。翻訳、通貨、SEOなど、基本だけど大切なコンゼプトを抑えながら勉強しましょう。</p>
 				</div>
 				<!--<div class="row detail">-->
 					<!--<div class="col-sm-6 speaker-prof">-->
