--- a/speaker.html
+++ b/speaker.html
@@ -195,6 +195,29 @@ UXの観点から神経物理学、行動経済学の知識が必要となって
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
+	<section class="column speaker" id="A050">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/A050.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">HTML5のAPI群をただひたすらに触ってみた記録</h2>
+					<h1>花谷拓磨</h1>
+					<p>HTML5には様々なAPIがありますが、今だあまり使われていない技術も数多く有ります。そんなHTML5のAPIたちに触れてみた所感をお話します。</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
 	<section class="column speaker" id="B020">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
