--- a/src/index.html
+++ b/src/index.html
@@ -354,6 +354,21 @@
 				
 				<li>
 					<div class="ih-item circle colored effect1">
+						<a href="speaker.html#A050"><div class="spinner"></div>
+							<div class="img">
+								<img style="height: inherit" src="./images/speakers/A050.jpg">
+							</div>
+							<div class="info">
+								<div class="info-back">
+									<p><i class="fa fa-share"></i></p>
+								</div>
+							</div>
+							<span class="name">花谷拓磨</span></a>
+					</div>
+				</li>
+				
+				<li>
+					<div class="ih-item circle colored effect1">
 						<a href="speaker.html#B020"><div class="spinner"></div>
 							<div class="img">
 								<img style="height: inherit" src="./images/speakers/B020.jpg">
