ヘッダーナビの切り離し

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="js/navigation.js"></script>
 
 
 	<script type="text/javascript" src="js/functions.js"></script>
@@ -86,7 +87,7 @@
 <header id="top-head">
     <div class="inner">
         <div id="mobile-head">
-            <h1 class="logo"><a href="./"><img src="./img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
+            <h1 class="logo"><a href="./"><img src="/img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
             <div id="nav-toggle">
                 <div>
                     <span></span>
