ロゴのパスを/から./に修正。

--- a/handson.html
+++ b/handson.html
@@ -55,7 +55,7 @@
 <header id="top-head">
     <div class="inner">
         <div id="mobile-head">
-            <h1 class="logo"><a href="./"><img src="/img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
+            <h1 class="logo"><a href="./"><img src="./img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
             <div id="nav-toggle">
                 <div>
                     <span></span>
